<resources>
    <string name="app_name">MyChat-AATJ</string>
    <string name="enter">ENTRAR</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="txtaccount">Criar conta!</string>
    <string name="txtrecuperasenha">Esqueci minha senha!</string>
    <string name="name">Nome</string>
    <string name="alterimg">Clique na imagem para alterar!</string>
    <string name="confpassword">Confirme a senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="contatos">Contatos</string>
    <string name="logut">Sair</string>
    <string name="contacts">Contatos</string>
    <string name="registeract">Cadastre-se!</string>
    <string name="chat">Chat</string>
    <string name="send">Enviar</string>
    <string name="messenger">Digite sua menssagem!</string>
    <string name="texte_messege">Oi! como vai a muito tempo que não ha vejo! Estou sentindo saudade! </string>
    <string name="titleMessenger">Ultimas comversas</string>
    <string name="singup">Já sou cadastrado!</string>
</resources>
